unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/link_VIPCN_Errors__c.field-meta.xml
<CustomField>
    <fullName>link_VIPCN_Errors__c</fullName>
    <label>PCN Expense Line Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>