unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Amount__c</fullName>
    <description>The amount for this line item. This field is automatically populated from the respective related record: the Reimbursement Amount field from Expense, the Milestone Cost field from Milestone, the Amount field from Miscellaneous Adjustment, and Total Cost from Timecard Split.

NOTE: this field is not automatically updated if the fields on the related record change.</description>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>