unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Budget_Header__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the budget header that this item applies to. This field is required.</description>
    <label>Budget Header</label>
    <referenceTo>pse__Budget_Header__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>