unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date of the invoice item. The value is populated by the New Invoice Items page from the respective field on the related record: Expense Date on Expense, Actual Date on Milestone, Effective Date on Misc. Adjustment, End Date on Timecard Split.</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>