unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Expense__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>pse__Expense__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>