unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Item_Exchange_Rate_Override__c.field-meta.xml
<CustomField>
    <fullName>pse__Item_Exchange_Rate_Override__c</fullName>
    <description>Item-level vendor currency exchange rate override.  Is applied if and only if the above "Override Item Exchange Rate" checkbox is checked.  If not checked then this field value has no effect.  Note that this will be set as the relative rate between the Vendor currency and the Project currency.</description>
    <label>Item Exchange Rate Override</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>