unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Override_Item_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Item_Exchange_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>May only be checked if parent Vendor Invoice has Apply Vendor Exchange Rate Override UN-checked (otherwise the rate would come from the parent Vendor Invoice).</description>
    <label>Override Item Exchange Rate</label>
    <type>Checkbox</type>
</CustomField>