unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>