unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Project_Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
    <description>This is the system exchange rate for the project currency (relative to the corporate currency)  It should be read only the page layout.  The field is auto populated by the system.</description>
    <label>Project Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>