unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource related to this item. Valid for Time Card Splits and Expenses.</description>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>