unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Vendor_Currency__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Currency__c</fullName>
    <formula>pse__Vendor_Invoice__r.pse__Vendor_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Currency</label>
    <type>Text</type>
</CustomField>