unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Vendor_Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Currency_Exchange_Rate__c</fullName>
    <description>Vendor Currency Exchange Rate that is used to convert amount to Vendor currency.  This is always populated based on whichever rate is actually used - Project Currency Rate, Vendor Invoice Item override rate, or parent Vendor Invoice override rate.  This field is auto-populated by the system, and should be read only on the page layout.</description>
    <label>Vendor Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>