unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Vendor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Invoice__c</fullName>
    <label>Vendor Invoice</label>
    <referenceTo>pse__Vendor_Invoice__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>