unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Vendor_Invoice_ER_Override_Applied__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Invoice_ER_Override_Applied__c</fullName>
    <formula>IF(pse__Vendor_Invoice__r.pse__Override_Vendor_Invoice_Exchange_Rate__c, $Label.pse__common_label_yes , $Label.pse__common_label_no)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Invoice ER Override Applied</label>
    <type>Text</type>
</CustomField>