unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Amount_Calculation_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Amount_Calculation_Error</fullName>
    <active>true</active>
    <description>Verify Amount = Quantity * Unit Price if set.</description>
    <errorConditionFormula>AND(NOT(ISNULL( pse__Quantity__c )), NOT(ISNULL( pse__Unit_Price__c )),ABS(pse__Amount__c - (pse__Quantity__c*pse__Unit_Price__c))&gt;=0.01)</errorConditionFormula>
    <errorDisplayField>pse__Amount__c</errorDisplayField>
    <errorMessage>Amount field does not match Quantity times Unit Price</errorMessage>
</ValidationRule>