unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Budget_Currency_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Currency_Mismatch</fullName>
    <active>false</active>
    <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,TEXT(CurrencyIsoCode) != TEXT(pse__Budget_Header__r.CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency does not match the budget's currency</errorMessage>
</ValidationRule>