unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Budget_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Project_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,pse__Budget_Header__r.pse__Project__c != pse__Project__c)</errorConditionFormula>
    <errorMessage>The budget's project must match the project</errorMessage>
</ValidationRule>