unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Budget_required_and_constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_required_and_constant</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN(pse__Budget_Header__c)=0,ISCHANGED(pse__Budget_Header__c))</errorConditionFormula>
    <errorMessage>Budget Header is required and cannot be changed once set</errorMessage>
</ValidationRule>