unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Invoice_Account_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Invoice_Account_Mismatch</fullName>
    <active>false</active>
    <errorConditionFormula>pse__Project__r.pse__Account__c != pse__Vendor_Invoice__r.pse__Account__c</errorConditionFormula>
    <errorDisplayField>pse__Project__c</errorDisplayField>
    <errorMessage>The selected project's account must match the account of the Vendor Invoice</errorMessage>
</ValidationRule>