unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Invoice_Currency_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Invoice_Currency_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Vendor_Invoice__c)&gt;0,TEXT(CurrencyIsoCode) != TEXT(pse__Vendor_Invoice__r.CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>The currency must match the currency of the Vendor Invoice</errorMessage>
</ValidationRule>