unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Invoice_Submitted_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Invoice_Submitted_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(pse__Vendor_Invoice__r.pse__Submitted__c,OR(ISCHANGED(pse__Amount__c),ISCHANGED(pse__Date__c)))</errorConditionFormula>
    <errorMessage>The Amount and Date fields cannot be changed for submitted vendor invoices</errorMessage>
</ValidationRule>