unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Invoice_Submitted_No_New_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Invoice_Submitted_No_New_Items</fullName>
    <active>true</active>
    <errorConditionFormula>AND(pse__Vendor_Invoice__r.pse__Submitted__c,ISNEW())</errorConditionFormula>
    <errorMessage>Cannot create new items for a submitted vendor invoice</errorMessage>
</ValidationRule>