unpackaged/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Rate_Required_when_Overriding.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Rate_Required_when_Overriding</fullName>
    <active>true</active>
    <description>Ensures that a rate is provided if the Override Currency Exchange Rate checkbox is checked.</description>
    <errorConditionFormula>AND(pse__Override_Item_Exchange_Rate__c =TRUE,
         OR(ISNULL(pse__Item_Exchange_Rate_Override__c) ,
               ISBLANK(pse__Item_Exchange_Rate_Override__c) 
             )
       )</errorConditionFormula>
    <errorDisplayField>pse__Item_Exchange_Rate_Override__c</errorDisplayField>
    <errorMessage>Item Exchange Rate Override must be supplied when checking the Override check box.</errorMessage>
</ValidationRule>